tests/functional/lang/eval-fail-compareVersions-2.err.exp
error:
       … while calling the 'compareVersions' builtin
         at /pwd/lang/eval-fail-compareVersions-2.nix:1:1:
            1| builtins.compareVersions "abd" { }
             | ^
            2|

       … while evaluating the second argument passed to builtins.compareVersions

       error: expected a string but found a set: { }
